# QFED

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  cmake_it  components.yaml
config/: GMAO_Shared.sparse
dev_toolbox/: gen_global_gasflaring_source.py  lib_IGBP_plus.py
dev_toolbox/aerosoltuning/: README.md  c180R_grid_surface_area.csv  data_preprocessing.py  emission_scaling.py
dev_toolbox/aerosoltuning/tools/: biome_tuning.py  eisf_functions.py
dev_toolbox/frpscaling/: analysis_frp_scaling.py  analysis_frp_scaling_mulityear.py  lib_frp_scaling.py
dev_toolbox/igbp/: gen_global_MODIS_IGBP.py
dev_toolbox/igbp+/: gen_global_MODIS_IGBP.py  gen_global_VIIRS_static_source.py  gen_global_daily_VIIRS_static_source.py  gen_global_gasflaring_source.py  gen_global_igbp_plus.py  gen_global_volcano_source.py  lib_IGBP_plus.py
dev_toolbox/staticsources/: gen_global_volcano_source.py
emissionstuning/: analysis_frp_scaling.py  frpscaling.py  lib_frp_scaling.py
src/: CMakeLists.txt  alpha_factor.yaml  alpha_factor_v3.2.yaml  config.yaml  config_0.1deg_NRT.yaml  config_0.25deg.yaml  config_0.25deg_NRT.yaml  config_NRT.yaml  config_vj2.yaml  emission_factors.yaml  emission_factors_3.2.yaml  qcscalingfactors.yaml  qfed_l3a.py  qfed_l3b.py
src/Notebooks/plumerise/: biome_eval.ipynb  emiss_eval.ipynb  hflux_eval.ipynb  mcbef_pr.ipynb  met_sampling.ipynb  planck_at_4um.ipynb  pr_eval.ipynb
src/Shared/: .gitignore  CMakeLists.txt
src/plumerise/: CMakeLists.txt  __init__.py  bioma.py  fluxes.py  freitas.py  locke.py  planck.py
src/plumerise/f2py/: CMakeLists.txt  FreitasPlume.h  FreitasPlume_Mod.F90  FreitasPlume_py.F90
src/plumerise/legacy/: PlumeRise_Mod.F90  PlumeRise_py.F90  qsat_Mod.F90
src/plumerise/legacy/2014/: PlumeRise.py
src/qfed/: __init__.py  classification_products.py  cli_utils.py  emissions.py  fire.py  fire_products.py  frp.py  geolocation_products.py  grid.py  instruments.py  inventory.py  mxd14_l3.py  pathfinder.py  scaletov2.py  utils.py  vegetation.py  version.py
tests/: __init__.py
tests/qfed/: test_classification_products.py  test_fire_products.py  test_frp.py  test_geolocation_products.py  test_grid.py  test_inventory.py
